Fixed nav data alignment

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -39,8 +39,16 @@
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
 }
-.round-image {
-  .round-image();
+.round-image-top {
+  border-radius: 50%;
+  width:70px;
+  height: 70px;
+  float: right;
+  position: relative;
+  border: 4px solid #ffffff;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
 }
 
 .block {
@@ -416,17 +424,15 @@ div.center {
 
 .button_top p, a{
   color: #ffffff;
+  top: 12px;
+  right: 10px;
   font-weight: bold;
+  position: relative;
   text-decoration: none;
 }
 
 .button_top a:hover{
   color: #298BDA;
-}
-
-img.prof_top{
-  display: inline-block;
-  //width: 110px;
 }
 
 form.create {
